# src/Models/Todo.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\Models;
+
+class Todo
+{
+    public $id;
+    public $task;
+    public $status;
+    public $favorite;
+    public $created_at;
+    public $completed_at;
+
+    // Personalize métodos e lógica de transformação conforme necessário.
+}
