# src/Views/emails/recover-template.php
@@ -1,0 +1,4 @@
+<p>Hello <?= htmlspecialchars($name) ?>,</p>
+<p>Click the link below to reset your password:</p>
+<p><a href="<?= htmlspecialchars($link) ?>"><?= htmlspecialchars($link) ?></a></p>
+<p>If you didn't request this, just ignore this email.</p>
